<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="#FFFFFF"
    card_view:cardBackgroundColor="#F3F2EC"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEAEA">

        <ImageView
            android:id="@+id/itemIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_launcher_foreground"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/insert_description_here"
            android:textStyle="italic"
            card_view:layout_constraintStart_toEndOf="@+id/itemIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/tvItemName" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="#151515"
            card_view:layout_constraintStart_toEndOf="@+id/itemIcon"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDollarSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/dollar_sign"
            card_view:layout_constraintStart_toEndOf="@+id/tvItemName"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            card_view:layout_constraintStart_toEndOf="@+id/tvDollarSign"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bought"
            card_view:layout_constraintStart_toEndOf="@+id/cbBought"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDesc" />

        <CheckBox
            android:id="@+id/cbBought"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            card_view:layout_constraintStart_toEndOf="@+id/itemIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDesc" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#3D9CE8"
            android:text="@string/edit"
            android:textSize="10sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#DA0A0A"
            android:text="@string/del"
            android:textSize="10sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/btnEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>